crux-mir/test/symb_eval/num/unchecked_arith.good
test unchecked_arith/<DISAMB>::add_test[0]: returned 44, [Crux] Attempting to prove verification conditions.
FAILED
test unchecked_arith/<DISAMB>::mul_test[0]: returned 32, [Crux] Attempting to prove verification conditions.
FAILED
test unchecked_arith/<DISAMB>::shl_test[0]: returned 0, [Crux] Attempting to prove verification conditions.
FAILED
test unchecked_arith/<DISAMB>::shr_test[0]: returned 0, [Crux] Attempting to prove verification conditions.
FAILED
test unchecked_arith/<DISAMB>::sub_test[0]: returned 156, [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- unchecked_arith/<DISAMB>::add_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/num/uint_macros.rs:717:17: 717:53 !./libs/core/src/num/mod.rs:447:5: 468:6: error: in core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_add[0]
[Crux]   Binary operation (+) would overflow
[Crux]   Context:
[Crux]     ./libs/core/src/num/uint_macros.rs:717:17: 717:53 !./libs/core/src/num/mod.rs:447:5: 468:6: core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_add[0]
[Crux]     test/symb_eval/num/unchecked_arith.rs:5:14: 5:38: unchecked_arith/<DISAMB>::add_test[0]

---- unchecked_arith/<DISAMB>::mul_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/num/uint_macros.rs:1105:17: 1105:53 !./libs/core/src/num/mod.rs:447:5: 468:6: error: in core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_mul[0]
[Crux]   Binary operation (*) would overflow
[Crux]   Context:
[Crux]     ./libs/core/src/num/uint_macros.rs:1105:17: 1105:53 !./libs/core/src/num/mod.rs:447:5: 468:6: core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_mul[0]
[Crux]     test/symb_eval/num/unchecked_arith.rs:15:14: 15:38: unchecked_arith/<DISAMB>::mul_test[0]

---- unchecked_arith/<DISAMB>::shl_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/num/uint_macros.rs:1794:17: 1794:53 !./libs/core/src/num/mod.rs:447:5: 468:6: error: in core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_shl[0]
[Crux]   Binary operation (<<) would overflow
[Crux]   Context:
[Crux]     ./libs/core/src/num/uint_macros.rs:1794:17: 1794:53 !./libs/core/src/num/mod.rs:447:5: 468:6: core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_shl[0]
[Crux]     test/symb_eval/num/unchecked_arith.rs:20:14: 20:38: unchecked_arith/<DISAMB>::shl_test[0]

---- unchecked_arith/<DISAMB>::shr_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/num/uint_macros.rs:1966:17: 1966:53 !./libs/core/src/num/mod.rs:447:5: 468:6: error: in core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_shr[0]
[Crux]   Binary operation (>>) would overflow
[Crux]   Context:
[Crux]     ./libs/core/src/num/uint_macros.rs:1966:17: 1966:53 !./libs/core/src/num/mod.rs:447:5: 468:6: core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_shr[0]
[Crux]     test/symb_eval/num/unchecked_arith.rs:25:14: 25:38: unchecked_arith/<DISAMB>::shr_test[0]

---- unchecked_arith/<DISAMB>::sub_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/num/uint_macros.rs:896:17: 896:53 !./libs/core/src/num/mod.rs:447:5: 468:6: error: in core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_sub[0]
[Crux]   Binary operation (-) would overflow
[Crux]   Context:
[Crux]     ./libs/core/src/num/uint_macros.rs:896:17: 896:53 !./libs/core/src/num/mod.rs:447:5: 468:6: core/<DISAMB>::num[0]::{impl#6}[0]::unchecked_sub[0]
[Crux]     test/symb_eval/num/unchecked_arith.rs:10:14: 10:38: unchecked_arith/<DISAMB>::sub_test[0]

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 5
[Crux]   Proved: 0
[Crux]   Disproved: 5
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
